--- a/GyManager/nbproject/project.properties
+++ b/GyManager/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=GyManager
+application.vendor=yova_
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/GyManager.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GyManager
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-5.1.49.jar=C:\\Users\\yova_\\Documents\\ITSM\\SEMESTRE 6\\Ingenieria de Software\\GyManager\\Librerias\\mysql-connector-java-5.1.49.jar
 includes=**
